test/type/wrong/hm1.kk
val wrong = if (True) then 1 else True
